# dmarc-parser

./: .dockerignore  .gitignore  Dockerfile  README.md  db.py  init_db.py  libcommon.py  libgmail.py  main.py  models.py  pyproject.toml
templates/: base.html  dashboard.html  report_details.html  reports.html  upload.html
